--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="hamburguer">
+        <div class="line" id="line1"></div>
+        <div class="line" id="line2"></div>
+        <div class="line" id="line3"></div>
+        <span>Fechar</span>
+      </div>
+
       <header>
         <div class="img-wrapper">
           <img src="imagem/bg1.jpg" alt="" />
@@ -38,6 +45,26 @@
           <button>Saiba mais</button>
         </div>
       </header>
+      <div class="sidebar">
+        <nav>
+          <ul class="menu">
+            <li class="menu-item"><a href="" class="menu-link">Home</a></li>
+            <li class="menu-item">
+              <a href="" class="menu-link">O que fazemos</a>
+            </li>
+            <li class="menu-item"><a href="" class="menu-link">Contato</a></li>
+            <li class="menu-item">
+              <a href="" class="menu-link">Orçamento</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="social-media">
+          <a href=""><i class="fab fa-facebook"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
+          <a href=""><i class="fab fa-whatsapp"></i></a>
+        </div>
+      </div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
